@@ -1,3 +1,15 @@
+2014-10-31  Tim Horton  <timothy_horton@apple.com>
+
+        Remove "Add to iPhoto" from the action menu's sharing menu
+        https://bugs.webkit.org/show_bug.cgi?id=138251
+        <rdar://problem/18837197>
+
+        Reviewed by Anders Carlsson.
+
+        * UIProcess/mac/WKActionMenuController.mm:
+        (-[WKActionMenuController sharingServicePicker:sharingServicesForItems:mask:proposedSharingServices:]):
+        Filter out "Add to iPhoto".
+
 2014-10-31  Adrian Perez de Castro  <aperez@igalia.com>
 
         [GTK] Support script message handlers WebKitUserContentManager
