@@ -1,3 +1,14 @@
+2014-10-31  Tim Horton  <timothy_horton@apple.com>
+
+        Remove "Add to iPhoto" from the action menu's sharing menu
+        https://bugs.webkit.org/show_bug.cgi?id=138251
+        <rdar://problem/18837197>
+
+        Reviewed by Anders Carlsson.
+
+        * platform/spi/mac/NSSharingServiceSPI.h:
+        Add 'name' to the NSSharingService SPI header.
+
 2014-10-31  Akos Kiss  <akiss@inf.u-szeged.hu>
 
         Fix type clash warning in supports_error rule of CSSGrammar.
